Fix spacing between lookbook elements

--- a/src/assets/scss/layouts/pages.scss
+++ b/src/assets/scss/layouts/pages.scss
@@ -143,11 +143,11 @@
 
 
     div:nth-child(odd) {
-      padding-right: 1px;
+      padding-right: .8px;
     }
 
     div:nth-child(even) {
-      padding-left: 1px;
+      padding-left: .5px;
     }
   }
 }
