--- a/theme/assets/style.css
+++ b/theme/assets/style.css
@@ -230,9 +230,9 @@ body {
     .pages--lookbook div {
       margin-top: -3px; }
     .pages--lookbook div:nth-child(odd) {
-      padding-right: 1px; }
+      padding-right: .8px; }
     .pages--lookbook div:nth-child(even) {
-      padding-left: 1px; } }
+      padding-left: .5px; } }
 
 .menu {
   font-size: .75em;
